update journal home page to be /journal

--- a/templates/base.html
+++ b/templates/base.html
@@ -18,7 +18,7 @@
   <body>
     {% block navbar %}{% endblock %} {% block content %}{% endblock %} {% block
     footer %}{% endblock %} {% block scripts %}
-    <script id="__bs_script__">
+    <!-- <script id="__bs_script__">
       //<![CDATA[
       document.write(
         "<script async src='http://HOST:3000/browser-sync/browser-sync-client.js?v=2.26.14'><\/script>".replace(
@@ -27,7 +27,7 @@
         )
       );
       //]]>
-    </script>
+    </script> -->
     {% endblock %}
   </body>
 </html>
